<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<properties>
		<!-- Produces timestamped builds.
	 	<maven.build.timestamp.format>yyyyMMdd-HHmm</maven.build.timestamp.format>
    	<dev.build.timestamp>${maven.build.timestamp}</dev.build.timestamp>
    	-->
		<bundle.symbolicName>org.cytoscape.rest.simple-rest</bundle.symbolicName>
		<bundle.namespace>org.cytoscape.rest</bundle.namespace>
		<maven-compiler-plugin.version>3.13.0</maven-compiler-plugin.version>
		<maven-surefire-plugin.version>3.0.0-M3</maven-surefire-plugin.version>
		<maven-bundle-plugin.version>5.1.9</maven-bundle-plugin.version>
		<osgi.api.version>7.0.0</osgi.api.version>
    <osgi.compendium.version>7.0.0</osgi.compendium.version>
 
 		<karaf.version>4.4.7</karaf.version>
		<junit.version>4.12</junit.version>
		<jersey.version>2.23</jersey.version>

		<rest.api.version>v1</rest.api.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<cytoscape.api.version>3.11.0-SNAPSHOT</cytoscape.api.version>
	</properties>

	<groupId>org.cytoscape</groupId>
	<artifactId>simple-rest</artifactId>

	<version>3.13.3-SNAPSHOT</version>
	<packaging>bundle</packaging>
	<name>simpleREST</name>

	<repositories>
		<repository>
			<id>cytoscape_releases</id>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
			<releases>
				<enabled>true</enabled>
			</releases>
			<name>Cytoscape Releases</name>
			<url>https://nrnb-nexus.ucsd.edu/repository/cytoscape_releases/</url>
		</repository>
		<repository>
			<id>cytoscape_snapshots</id>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
			<releases>
				<enabled>false</enabled>
			</releases>
			<name>Cytoscape Snapshots</name>
			<url>https://nrnb-nexus.ucsd.edu/repository/cytoscape_snapshots/</url>
		</repository>
    <repository>
      <id>mvnrepository.com</id>
      <name>mvnrepository.com</name>
      <url>https://mvnrepository.com/artifact/</url>
    </repository>

	</repositories>

	<distributionManagement>
		<repository>
			<id>cytoscape_releases</id>
			<name>Cytoscape Releases</name>
			<url>https://nrnb-nexus.ucsd.edu/repository/cytoscape_releases/</url>
		</repository>
		<snapshotRepository>
			<id>cytoscape_snapshots</id>
			<name>Cytoscape Snapshots</name>
			<url>https://nrnb-nexus.ucsd.edu/repository/cytoscape_snapshots/</url>
		</snapshotRepository>
	</distributionManagement>

	<!-- SCM Information. Currently hosted at GitHub. -->
	<scm>
		<connection>scm:https://github.com/cytoscape/cyREST.git</connection>
		<developerConnection>scm:git@github.com:cytoscape/cyREST.git</developerConnection>
	</scm>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>${maven-compiler-plugin.version}</version>
				<extensions>true</extensions>
				<configuration>
					<source>21</source>
					<target>21</target>
					<encoding>UTF-8</encoding>
					<optimize>true</optimize>
					<showWarnings>true</showWarnings>
					<showDeprecation>true</showDeprecation>
					<compilerArguments>
						<Xmaxwarns>10000</Xmaxwarns>
						<Xmaxerrs>10000</Xmaxerrs>
					</compilerArguments>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.felix</groupId>
				<artifactId>maven-bundle-plugin</artifactId>
				<version>${maven-bundle-plugin.version}</version>
				<extensions>true</extensions>
				<configuration>
					<instructions>
						<Bundle-SymbolicName>${bundle.symbolicName}</Bundle-SymbolicName>
						<Bundle-Version>${project.version}</Bundle-Version>
						<Bundle-Activator>${bundle.namespace}.internal.CyActivator</Bundle-Activator>
            <Embed-Dependency>*;scope=!provided|test;groupId=!org.cytoscape</Embed-Dependency>
						<Import-Package>*;resolution:=optional</Import-Package>
						<Private-Package>${bundle.namespace}.internal.*</Private-Package>
					</instructions>
				</configuration>
			</plugin>
		</plugins>
	</build>

  <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.fasterxml.jackson</groupId>
                <artifactId>jackson-bom</artifactId>
                <version>2.18.0</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

	<dependencies>

    <dependency>
      <groupId>org.cytoscape</groupId>
      <artifactId>app-api</artifactId>
      <version>${cytoscape.api.version}</version>
      <scope>provided</scope>
    </dependency>

		<dependency>
			<groupId>org.cytoscape</groupId>
			<artifactId>property-api</artifactId>
			<version>${cytoscape.api.version}</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>org.cytoscape</groupId>
			<artifactId>service-api</artifactId>
			<version>${cytoscape.api.version}</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>org.cytoscape</groupId>
			<artifactId>model-api</artifactId>
			<version>${cytoscape.api.version}</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>org.cytoscape</groupId>
			<artifactId>swing-application-api</artifactId>
			<version>${cytoscape.api.version}</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>org.cytoscape</groupId>
			<artifactId>ci-api</artifactId>
			<version>${cytoscape.api.version}</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>org.ops4j.pax.logging</groupId>
			<artifactId>pax-logging-api</artifactId>
			<version>2.0.10</version>
			<scope>provided</scope>
		</dependency>

    <dependency>
      <groupId>org.osgi</groupId>
      <artifactId>osgi.core</artifactId>
      <version>${osgi.api.version}</version>
      <scope>provided</scope>
    </dependency>

    <dependency>
       <groupId>org.osgi</groupId>
       <artifactId>org.osgi.service.component.annotations</artifactId>
       <version>1.4.0</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
        <groupId>javax.ws.rs</groupId>
        <artifactId>javax.ws.rs-api</artifactId>
        <version>2.1</version>
        <scope>provided</scope>
     </dependency>

     <dependency>
       <groupId>io.swagger.core.v3</groupId>
       <artifactId>swagger-models</artifactId>
       <version>2.2.39</version>
     </dependency>

     <dependency>
      <groupId>io.swagger.core.v3</groupId>
      <artifactId>swagger-annotations</artifactId>
      <version>2.2.39</version>
    </dependency>

    <dependency>
      <groupId>io.swagger.core.v3</groupId>
      <artifactId>swagger-jaxrs2</artifactId>
      <version>2.2.39</version>
    </dependency>

    <dependency>
      <groupId>io.swagger.core.v3</groupId>
      <artifactId>swagger-integration</artifactId>
      <version>2.2.39</version>
    </dependency>

    <!--dependency>
      <groupId>io.swagger</groupId>
      <artifactId>swagger-annotations</artifactId>
      <version>1.6.16</version>
    </dependency>

    <dependency>
      <groupId>io.swagger</groupId>
      <artifactId>swagger-models</artifactId>
      <version>1.6.16</version>
      <exclusions>
        <exclusion>
          <groupId>org.slf4j</groupId>
          <artifactId>slf4j-api</artifactId>
        </exclusion>
      </exclusions>
    </dependency>

    <dependency>
      <groupId>io.swagger</groupId>
      <artifactId>swagger-jaxrs</artifactId>
      <version>1.6.16</version>
      <exclusions>
        <exclusion>
          <groupId>org.slf4j</groupId>
          <artifactId>slf4j-api</artifactId>
        </exclusion>
        <exclusion>
          <groupId>io.swagger</groupId>
          <artifactId>swagger-annotations</artifactId>
        </exclusion>
      </exclusions>
    </dependency-->


    <dependency>
      <groupId>org.checkerframework</groupId>
      <artifactId>checker-compat-qual</artifactId>
      <version>2.5.5</version>
    </dependency>

    <dependency>
      <groupId>org.checkerframework</groupId>
      <artifactId>checker-qual</artifactId>
      <version>3.37.0</version>
    </dependency>


    <dependency>
      <groupId>jakarta.xml.bind</groupId>
      <artifactId>jakarta.xml.bind-api</artifactId>
      <version>4.0.2</version>
      <scope>provided</scope>
    </dependency>

    <!--dependency>
      <groupId>com.google.inject</groupId>
      <artifactId>guice</artifactId>
      <version>7.0.0</version>
    </dependency-->

    <dependency>
      <groupId>com.fasterxml.jackson.core</groupId> 
      <artifactId>jackson-databind</artifactId>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>com.fasterxml.jackson.module</groupId> 
      <artifactId>jackson-module-jaxb-annotations</artifactId>
      <scope>provided</scope>
    </dependency>



	</dependencies>
</project>
